Replace Class.newInstance() with Class.getDeclaredConstructor().newInstance()